assets/css/browley.css
	html{
		margin: 0;
		width: 100%;
	}

	body{
		font-family: 'Open Sans', 'Helvetica Neue', sans-serif !important;
		padding-bottom: 30px;
	}

	#header{
		width: 100%;
		height: 50px;
		margin: 0 0 15px;
		background: white;
		border-bottom: 3px solid #e7e7e7;
		text-align: left;
	}

	#click-to-close{
		position: absolute;
		left: 0;
		right: 0;
		top: 0;
		height: 100vh;
		/*background: red;*/
		z-index: 100;
	}

	div.dropdown{z-index:101; display:block;}

	div#nav-btn{
		display: block;
		padding: 10px 15px;
		font-size: 14pt;
		color: #e74c3c;
		cursor: pointer;
		transition: 0.25s;
		-webkit-transition: 0.25s;
		text-align: center;
	}

	div#nav-btn:hover{
		color: white;
		background: #e74c3c;
	}

	ul#nav-menu{
		list-style: none;
		padding: 0;
		margin-top: 0px;
		background: #fafafa;
		z-index: 101;
		text-align: center;
		box-shadow: 0px 3px 2px rgba(0,0,0,0.3);
	}

	ul#nav-menu li{
		font-size: 14pt;
		color: #e74c3c;
	}

	ul#nav-menu li:not(:nth-of-type(1)){border-top:1px solid #e4e4e4;}

	ul#nav-menu li a{
		display: block;
		padding: 10px 10px;
		color: #e74c3c;
	}

	ul#nav-menu li a:hover{
		background: #e74c3c;
		color: white;
		text-decoration: none !important;
	}

	@media screen and (min-width: 768px) {
		div.dropdown{display:inline-block;}
		div#nav-btn{
			display:inline-block;
			text-align: left;
		}
		ul#nav-menu{
			text-align: left;
			margin-left: 12px;
			margin-top: 3px;
			
		}

		ul#nav-menu li a{
			padding: 10px 30px 10px 22px;
		}

	}












	span.badge{
		width: 18px;
		float: right;
		font-weight: 300 !important;
		padding: 3px 6px !important;
	}

	ul.noMarginList{
		padding:0;
		padding-left: 20px;
		margin: 10px auto;
	}

	ul.noMarginList li{
		margin-bottom: 0.1em;
	}

